Exclude logs directory from rsync deployment
- Add logs/ and *.log to exclusion list
- Prevents permission errors when trying to delete log files
- Logs are system-generated and should not be managed by deployment

--- a/.github/workflows/deploy-dreamhost.yml
+++ b/.github/workflows/deploy-dreamhost.yml
@@ -45,9 +45,11 @@ jobs:
             --exclude='config.php' \
             --exclude='cache/' \
             --exclude='uploads/' \
+            --exclude='logs/' \
             --exclude='.git/' \
             --exclude='.DS_Store' \
             --exclude='.dh-diag/' \
+            --exclude='*.log' \
             -e "ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no -o IdentitiesOnly=yes -o UserKnownHostsFile=~/.ssh/known_hosts" \
             web/ \
             ${{ secrets.DH_DEV_USER }}@${{ secrets.DH_DEV_HOST }}:${{ secrets.DH_DEV_REMOTE_PATH }}
@@ -95,9 +97,11 @@ jobs:
             --exclude='config.php' \
             --exclude='cache/' \
             --exclude='uploads/' \
+            --exclude='logs/' \
             --exclude='.git/' \
             --exclude='.DS_Store' \
             --exclude='.dh-diag/' \
+            --exclude='*.log' \
             -e "ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no -o IdentitiesOnly=yes -o UserKnownHostsFile=~/.ssh/known_hosts" \
             web/ \
             ${{ secrets.DH_PROD_USER }}@${{ secrets.DH_PROD_HOST }}:${{ secrets.DH_PROD_REMOTE_PATH }}
