--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "9090:80"
     volumes:
-      - ./web:/var/www/html
+      - ./public:/var/www/html
     container_name: flushing-dating-com
     depends_on:
       mysql:
