Add ERROR_REPORTING option to config
- Add separate ERROR_REPORTING constant for controlling error display
- Update index.php to use ERROR_REPORTING (with DEBUG as fallback)
- Allows independent control of error reporting from DEBUG mode
- Helpful for diagnosing production issues

--- a/public/config.php.sample
+++ b/public/config.php.sample
@@ -3,6 +3,10 @@
 //Debug mode.
 define( 'DEBUG', true );
 
+//Error reporting - set to true to display PHP errors on screen
+//Warning: Only enable in development/staging, never in production!
+define( 'ERROR_REPORTING', true );
+
 //Define DB variables.
 define( 'DB_HOST', 'your-database-host' );
 define( 'DB_NAME', 'your-database-name' );
