--- a/.github/workflows/deploy-dreamhost.yml
+++ b/.github/workflows/deploy-dreamhost.yml
@@ -38,6 +38,34 @@ jobs:
             public/ \
             ${{ secrets.DH_DEV_USER }}@${{ secrets.DH_DEV_HOST }}:${{ secrets.DH_DEV_REMOTE_PATH }}
 
+      - name: Generate config.php
+        env:
+          SSH_USER: ${{ secrets.DH_DEV_USER }}
+          SSH_HOST: ${{ secrets.DH_DEV_HOST }}
+          REMOTE_PATH: ${{ secrets.DH_DEV_REMOTE_PATH }}
+        run: |
+          cat > /tmp/config.php << EOF
+          <?php if( ! defined('ROOT_PATH') ) die( 'Curiosity kills cat!' );
+
+          //Debug mode.
+          define( 'DEBUG', ${{ secrets.DH_DEV_DEBUG || 'true' }} );
+
+          //Error reporting - set to true to display PHP errors on screen
+          //Warning: Only enable in development/staging, never in production!
+          define( 'ERROR_REPORTING', ${{ secrets.DH_DEV_ERROR_REPORTING || 'true' }} );
+
+          //Define DB variables.
+          define( 'DB_HOST', '${{ secrets.DH_DEV_DB_HOST }}' );
+          define( 'DB_NAME', '${{ secrets.DH_DEV_DB_NAME }}' );
+          define( 'DB_USERNAME', '${{ secrets.DH_DEV_DB_USERNAME }}' );
+          define( 'DB_PASSWORD', '${{ secrets.DH_DEV_DB_PASSWORD }}' );
+
+          //Site Url.
+          define( 'SITE_URL', '${{ secrets.DH_DEV_SITE_URL }}' );
+          EOF
+          scp -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no -o IdentitiesOnly=yes /tmp/config.php ${SSH_USER}@${SSH_HOST}:${REMOTE_PATH}config.php
+          rm -f /tmp/config.php
+
       - name: Cleanup
         if: always()
         run: rm -f ~/.ssh/deploy_key
@@ -72,6 +100,34 @@ jobs:
             -e "ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no -o IdentitiesOnly=yes" \
             public/ \
             ${{ secrets.DH_PROD_USER }}@${{ secrets.DH_PROD_HOST }}:${{ secrets.DH_PROD_REMOTE_PATH }}
+
+      - name: Generate config.php
+        env:
+          SSH_USER: ${{ secrets.DH_PROD_USER }}
+          SSH_HOST: ${{ secrets.DH_PROD_HOST }}
+          REMOTE_PATH: ${{ secrets.DH_PROD_REMOTE_PATH }}
+        run: |
+          cat > /tmp/config.php << EOF
+          <?php if( ! defined('ROOT_PATH') ) die( 'Curiosity kills cat!' );
+
+          //Debug mode.
+          define( 'DEBUG', ${{ secrets.DH_PROD_DEBUG || 'false' }} );
+
+          //Error reporting - set to true to display PHP errors on screen
+          //Warning: Only enable in development/staging, never in production!
+          define( 'ERROR_REPORTING', ${{ secrets.DH_PROD_ERROR_REPORTING || 'false' }} );
+
+          //Define DB variables.
+          define( 'DB_HOST', '${{ secrets.DH_PROD_DB_HOST }}' );
+          define( 'DB_NAME', '${{ secrets.DH_PROD_DB_NAME }}' );
+          define( 'DB_USERNAME', '${{ secrets.DH_PROD_DB_USERNAME }}' );
+          define( 'DB_PASSWORD', '${{ secrets.DH_PROD_DB_PASSWORD }}' );
+
+          //Site Url.
+          define( 'SITE_URL', '${{ secrets.DH_PROD_SITE_URL }}' );
+          EOF
+          scp -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no -o IdentitiesOnly=yes /tmp/config.php ${SSH_USER}@${SSH_HOST}:${REMOTE_PATH}config.php
+          rm -f /tmp/config.php
 
       - name: Cleanup
         if: always()
