--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,27 +1,21 @@
 <IfModule mod_rewrite.c>
-
 RewriteEngine On
 RewriteBase /
 
-# Only redirect to HTTPS if not on localhost
+# Force HTTPS (except localhost)
 RewriteCond %{HTTPS} off
 RewriteCond %{HTTP_HOST} !^localhost [NC]
 RewriteCond %{HTTP_HOST} !^127\.0\.0\.1 [NC]
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-RewriteRule ^index\.php$ - [L]
+# Don't rewrite existing files
+RewriteCond %{REQUEST_FILENAME} -f
+RewriteRule ^ - [L]
 
-RewriteRule ^intro$ /intro.php [L]
-
-#Prevent directory structure being peeped.
-#@link: https://stackoverflow.com/questions/5437375/apache-mod-rewrite-for-everything-except-root
+# Don't rewrite existing directories
 RewriteCond %{REQUEST_FILENAME} -d
-RewriteCond %{REQUEST_URI} !^/$
-RewriteRule (.*) /403 [L]
+RewriteRule ^ - [L]
 
-#All routes to the index.php
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule (.*) /index.php?uri=$1 [L]
-
+# Route everything else to index.php
+RewriteRule ^(.*)$ index.php?uri=$1 [L,QSA]
 </IfModule>
