build more pages

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,9 @@
         "editorGutter.background": "#241424",
         "editorCursor.foreground": "#651353",
         "editorCursor.width": "2",
-        "editor.selectionBackground": "#65135340",
+        "editor.selectionBackground": "#D72171",
+        "editor.selectionHighlightBackground": "#D7217180",
+        "editor.selectionForeground": "#ffffff",
         "editor.lineHighlightBackground": "#65135315",
         "editorBracketMatch.background": "#65135330",
         "editorBracketMatch.border": "#651353",
