update deploy xml for prod

--- a/.github/workflows/deploy-dreamhost.yml
+++ b/.github/workflows/deploy-dreamhost.yml
@@ -93,9 +93,9 @@ jobs:
         run: |
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
-          echo "${{ secrets.DH_PROD_SSH_KEY }}" > ~/.ssh/deploy_key
+          echo "${{ secrets.DH_DEV_SSH_KEY }}" > ~/.ssh/deploy_key
           chmod 600 ~/.ssh/deploy_key
-          ssh-keyscan -H "${{ secrets.DH_PROD_HOST }}" >> ~/.ssh/known_hosts 2>/dev/null
+          ssh-keyscan -H "${{ secrets.DH_DEV_HOST }}" >> ~/.ssh/known_hosts 2>/dev/null
 
       - name: Deploy to DreamHost
         run: |
@@ -110,12 +110,12 @@ jobs:
             --exclude='*.log' \
             -e "ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no -o IdentitiesOnly=yes" \
             public/ \
-            ${{ secrets.DH_PROD_USER }}@${{ secrets.DH_PROD_HOST }}:${{ secrets.DH_PROD_REMOTE_PATH }}
+            ${{ secrets.DH_PROD_USER }}@${{ secrets.DH_DEV_HOST }}:${{ secrets.DH_PROD_REMOTE_PATH }}
 
       - name: Generate config.php
         env:
           SSH_USER: ${{ secrets.DH_PROD_USER }}
-          SSH_HOST: ${{ secrets.DH_PROD_HOST }}
+          SSH_HOST: ${{ secrets.DH_DEV_HOST }}
           REMOTE_PATH: ${{ secrets.DH_PROD_REMOTE_PATH }}
         run: |
           cat > /tmp/config.php << EOF
@@ -129,10 +129,10 @@ jobs:
           define( 'ERROR_REPORTING', ${{ secrets.DH_PROD_ERROR_REPORTING || 'false' }} );
 
           //Define DB variables.
-          define( 'DB_HOST', '${{ secrets.DH_PROD_DB_HOST }}' );
-          define( 'DB_NAME', '${{ secrets.DH_PROD_DB_NAME }}' );
-          define( 'DB_USERNAME', '${{ secrets.DH_PROD_DB_USERNAME }}' );
-          define( 'DB_PASSWORD', '${{ secrets.DH_PROD_DB_PASSWORD }}' );
+          define( 'DB_HOST', '${{ secrets.DH_DEV_DB_HOST }}' );
+          define( 'DB_NAME', '${{ secrets.DH_DEV_DB_NAME }}' );
+          define( 'DB_USERNAME', '${{ secrets.DH_DEV_DB_USERNAME }}' );
+          define( 'DB_PASSWORD', '${{ secrets.DH_DEV_DB_PASSWORD }}' );
 
           //Site Url.
           define( 'SITE_URL', '${{ secrets.DH_PROD_SITE_URL }}' );
@@ -143,7 +143,7 @@ jobs:
       - name: Generate robots.txt
         env:
           SSH_USER: ${{ secrets.DH_PROD_USER }}
-          SSH_HOST: ${{ secrets.DH_PROD_HOST }}
+          SSH_HOST: ${{ secrets.DH_DEV_HOST }}
           REMOTE_PATH: ${{ secrets.DH_PROD_REMOTE_PATH }}
           SITE_URL: ${{ secrets.DH_PROD_SITE_URL }}
         run: |
